# sec-project

./: .gitignore  Cargo.toml  README.md  build.rs  thoughts.txt
HA_client/: Cargo.toml
client/: Cargo.toml
client/src/: lib.rs  main.rs  proofing_system.rs  reporting.rs  reports.rs
client/tests/: common.rs  obtain_report_tests.rs  proofing_system_tests.rs  reports_tests.rs
grid/: Cargo.toml  grid.txt
grid/src/: grid.rs  main.rs
ha_client/: Cargo.toml
ha_client/src/: lib.rs  main.rs  verifying.rs
ha_client/tests/: common.rs  verifying_tests.rs
multiple_servers/: Cargo.toml
proto/: locationstorage.proto
protos/: Cargo.toml  build.rs
protos/src/: double_echo_broadcast.proto  lib.rs  location_master.proto  location_proof.proto  location_storage.proto
sbin/: integration_tests_setup.sh  lauch_system.sh  launch_system.sh  proofing_test_setup.sh  reports_test_setup.sh
security/: Cargo.toml
security/src/: double_echo.rs  key_management.rs  lib.rs  main.rs  proof.rs  report.rs  status.rs
server/: Cargo.toml
server/src/: main.rs
server/src/server/: double_echo_report.rs  management.rs  validating.rs
server/src/storage/: storage.rs
single_server/: Cargo.toml
single_server/src/: main.rs  storage.rs  validating.rs
single_server/src/server/: double_echo_report.rs  management.rs  mod.rs  storage.rs  validating.rs
single_server/src/storage/: storage.rs
