[package]
name = "protos"
version = "0.1.0"
authors = ["AfonsoRibeiro <1998afonsoribeiro1998@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.7"
tonic = "0.4"

[build-dependencies]
tonic-build = "0.4"
