[package]
name = "single_server"
version = "0.1.0"
authors = ["AfonsoRibeiro <1998afonsoribeiro1998@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5"
eyre = "0.6"
structopt = "0.3"
tokio = { version = "1.4", features = ["full"] }
tonic = "0.4"
protos = { path = "../protos" }
security = { path = "../security" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
sodiumoxide = "0.2.6"
atomicwrites = "0.3"